--- a/report.html
+++ b/report.html
@@ -69,7 +69,7 @@
                     </div>
                     <div class="card card-grid-top" id="card-C-1">
                         <div class="card-body">
-                            <h4 class="card-title text-center" id="card-title-C-1">聚焦內在的方法</h4>
+                            <h4 class="card-title text-center" id="card-title-C-1">聚焦内在目標</h4>
                             <p class="card-text" id="card-C-1-default">「目標」是行為的趨力，顯然您已確實掌握目標，毋忘初衷。</p>
                             <ol class="pl-2 pl-lg-4">
                                 <li class="card-text ui_C_1"></li>
