--- a/report.html
+++ b/report.html
@@ -53,8 +53,8 @@
                 </table>
             </div>
             <div style="text-align: center;">
-                <p class="font-blod mt-4 general-text" id="ui_D_1"></p>
-                <p class="font-blod mb-4 general-text" id="ui_D_2"></p>
+                <p class="font-blod mt-4" id="ui_D_1"></p>
+                <p class="font-blod mb-4" id="ui_D_2"></p>
             </div>
             <div class="container pt-3 pt-lg-5">
                 <div class="card-columns card-columns-header">
@@ -177,7 +177,7 @@
                 </div>
             </div>
             <div class="text-center mt-5">
-                <p class="font-blod general-text">建議您可定期進行專家系統自我檢測！檢驗改善成效，掌握自身狀態</p>
+                <p class="font-blod">建議您可定期進行專家系統自我檢測！檢驗改善成效，掌握自身狀態</p>
             </div>
         </div>
         <!-- 12宮格 -->
