--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                     <div class="form-group radio-type-B">
                         <div class="" >
                             <input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="5" name="{{{name}}}" >
-                            <label class="radio-inline radio-number font-blod align-middle mr-1 mr-lg-5">目前有　</label>
+                            <label class="radio-inline radio-number align-middle mr-1 mr-lg-5">目前有　</label>
                         </div>
                         <div class="">
                             <input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="1" name="{{{name}}}" >
-                            <label class="radio-inline radio-number font-blod align-middle mr-1 mr-lg-5">目前沒有</label>
+                            <label class="radio-inline radio-number align-middle mr-1 mr-lg-5">目前沒有</label>
                         </div>
                     </div>
                 </fieldset>
