--- a/report.html
+++ b/report.html
@@ -87,35 +87,35 @@
                     <div class="card card-grid-middle-large" id="card-A-1">
                         <div class="card-body pl-2">
                             <h4 class="card-title text-center" id="card-title-A-1">供給性缺氧</h4>
-                            <p class="card-text" id="ui_A_1_1">指數◆ </p>
+                            <p class="card-text" id="ui_A_1_1">供氧障礙程度： </p>
                             <p class="card-text" id="ui_A_1_2"></p>
                         </div>
                     </div>
                     <div class="card  card-grid-middle-large" id="card-A-2">
                         <div class="card-body pl-2">
                             <h4 class="card-title text-center" id="card-title-A-2">耗損性缺氧</h4>
-                            <p class="card-text" id="ui_A_2_1">指數◆ </p>
+                            <p class="card-text" id="ui_A_2_1">能量透支程度： </p>
                             <p class="card-text" id="ui_A_2_2"></p>
                         </div>
                     </div>
                     <div class="card" id="card-A-3">
                         <div class="card-body card-grid-middle-small pl-2">
                             <h4 class="card-title text-center" id="card-title-A-3">熱性體質</h4>
-                            <p class="card-text" id="ui_A_3_1">指數◆ </p>
+                            <p class="card-text" id="ui_A_3_1">損傷發炎程度： </p>
                             <p class="card-text" id="ui_A_3_2"></p>
                         </div>
                     </div>
                     <div class="card" id="card-A-4">
                         <div class="card-body card-grid-middle-small pl-2">
                             <h4 class="card-title text-center" id="card-title-A-4">濕性體質</h4>
-                            <p class="card-text" id="ui_A_4_1">指數◆ </p>
+                            <p class="card-text" id="ui_A_4_1">循環瘀滯程度： </p>
                             <p class="card-text" id="ui_A_4_2"></p>
                         </div>
                     </div>
                     <div class="card" id="card-A-5">
                         <div class="card-body card-grid-middle-small pl-2">
                             <h4 class="card-title text-center" id="card-title-A-5">寒性體質</h4>
-                            <p class="card-text" id="ui_A_5_1">指數◆ </p>
+                            <p class="card-text" id="ui_A_5_1">失調衰退程度： </p>
                             <p class="card-text" id="ui_A_5_2"></p>
                         </div>
                     </div>
