modify: 調整report頁框線

--- a/report.html
+++ b/report.html
@@ -39,7 +39,7 @@
         <!-- 12宮格 -->
         <div id="capture">
             <div>
-                <table class="container-fluid mt-3 mb-3 mt-lg-5  mb-lg-5">
+                <table class="container-fluid mt-3 mb-3 mt-lg-5 mb-lg-5">
                     <tr>
                         <td style="width: 25%; text-align: center;">
                             <img class="img-fluid pl-2" alt="Responsive image" src="image/report/logo.jpg">
@@ -56,122 +56,149 @@
                 <p class="font-blod mt-4 h4" id="ui_D_1"></p>
                 <p class="font-blod mb-4 h4" id="ui_D_2"></p>
             </div>
-            <div class="container pt-3 pt-lg-5">
+            <div class="container mb-0 pt-3 mb-lg-2 pt-lg-5">
                 <div class="card-columns card-columns-header">
-                    <div class="card card-grid-top" id="card-C-2">
-                        <div class="card-body">
-                            <h4 class="card-title text-center" id="card-title-C-2">創造有利條件</h4>
-                            <p class="card-text" id="card-C-2-default">顯然您已成功克服那些在生活中經常阻礙我們達成目標的誘惑！</p>
-                            <ol class="pl-2 pl-lg-4">
-                                <li class="card-text ui_C_2"></li>
-                                <li class="card-text ui_C_2"></li>
-                                <li class="card-text ui_C_2"></li>
-                            </ol>
+                    <div class="">
+                        <div class="card card-grid-top" id="card-C-2">
+                            <div class="card-body">
+                                <h4 class="card-title text-center" id="card-title-C-2">創造有利條件</h4>
+                                <p class="card-text" id="card-C-2-default">顯然您已成功克服那些在生活中經常阻礙我們達成目標的誘惑！</p>
+                                <ol class="pl-2 pl-lg-4">
+                                    <li class="card-text ui_C_2"></li>
+                                    <li class="card-text ui_C_2"></li>
+                                    <li class="card-text ui_C_2"></li>
+                                </ol>
+                            </div>
                         </div>
                     </div>
-                    <div class="card card-grid-top" id="card-C-1">
-                        <div class="card-body">
-                            <h4 class="card-title text-center" id="card-title-C-1">聚焦内在目標</h4>
-                            <p class="card-text" id="card-C-1-default">「目標」是行為的趨力，顯然您已確實掌握目標，毋忘初衷。</p>
-                            <ol class="pl-2 pl-lg-4">
-                                <li class="card-text ui_C_1"></li>
-                                <li class="card-text ui_C_1"></li>
-                                <li class="card-text ui_C_1"></li>
-                            </ol>
+                    <div class="">
+                        <div class="card card-grid-top" id="card-C-1">
+                            <div class="card-body">
+                                <h4 class="card-title text-center" id="card-title-C-1">聚焦内在目標</h4>
+                                <p class="card-text" id="card-C-1-default">「目標」是行為的趨力，顯然您已確實掌握目標，毋忘初衷。</p>
+                                <ol class="pl-2 pl-lg-4">
+                                    <li class="card-text ui_C_1"></li>
+                                    <li class="card-text ui_C_1"></li>
+                                    <li class="card-text ui_C_1"></li>
+                                </ol>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="container">
-                <div class="card-columns">
-                    <div class="card card-grid-middle-large" id="card-A-1">
-                        <div class="card-body pl-2">
-                            <h4 class="card-title text-center" id="card-title-A-1">供給性缺氧</h4>
-                            <p class="card-text" id="ui_A_1_1">供氧障礙程度(0-10)： </p>
-                            <p class="card-text" id="ui_A_1_2"></p>
+                <div class="card-columns" >
+                    <div class="">
+                        <div class="card card-grid-middle-large" id="card-A-1">
+                            <div class="card-body pl-2">
+                                <h4 class="card-title text-center" id="card-title-A-1">供給性缺氧</h4>
+                                <p class="card-text" id="ui_A_1_1">供氧障礙程度(0-10)： </p>
+                                <p class="card-text" id="ui_A_1_2"></p>
+                            </div>
                         </div>
                     </div>
-                    <div class="card  card-grid-middle-large" id="card-A-2">
-                        <div class="card-body pl-2">
-                            <h4 class="card-title text-center" id="card-title-A-2">耗損性缺氧</h4>
-                            <p class="card-text" id="ui_A_2_1">能量透支程度(0-10)： </p>
-                            <p class="card-text" id="ui_A_2_2"></p>
+                    <div class="">
+                        <div class="card  card-grid-middle-large" id="card-A-2">
+                            <div class="card-body pl-2">
+                                <h4 class="card-title text-center" id="card-title-A-2">耗損性缺氧</h4>
+                                <p class="card-text" id="ui_A_2_1">能量透支程度(0-10)： </p>
+                                <p class="card-text" id="ui_A_2_2"></p>
+                            </div>
                         </div>
                     </div>
-                    <div class="card" id="card-A-3">
-                        <div class="card-body card-grid-middle-small pl-2">
-                            <h4 class="card-title text-center" id="card-title-A-3">熱性體質</h4>
-                            <p class="card-text" id="ui_A_3_1">損傷發炎程度(0-10)： </p>
-                            <p class="card-text" id="ui_A_3_2"></p>
+                    <div class="mr-0 mr-lg-1">
+                        <div class="card" id="card-A-3">
+                            <div class="card-body card-grid-middle-small pl-2">
+                                <h4 class="card-title text-center" id="card-title-A-3">熱性體質</h4>
+                                <p class="card-text" id="ui_A_3_1">損傷發炎程度(0-10)： </p>
+                                <p class="card-text" id="ui_A_3_2"></p>
+                            </div>
                         </div>
                     </div>
-                    <div class="card" id="card-A-4">
-                        <div class="card-body card-grid-middle-small pl-2">
-                            <h4 class="card-title text-center" id="card-title-A-4">濕性體質</h4>
-                            <p class="card-text" id="ui_A_4_1">循環瘀滯程度(0-10)： </p>
-                            <p class="card-text" id="ui_A_4_2"></p>
+                    <div class="mr-0 mr-lg-1">
+                        <div class="card" id="card-A-4">
+                            <div class="card-body card-grid-middle-small pl-2">
+                                <h4 class="card-title text-center" id="card-title-A-4">濕性體質</h4>
+                                <p class="card-text" id="ui_A_4_1">循環瘀滯程度(0-10)： </p>
+                                <p class="card-text" id="ui_A_4_2"></p>
+                            </div>
                         </div>
                     </div>
-                    <div class="card" id="card-A-5">
-                        <div class="card-body card-grid-middle-small pl-2">
-                            <h4 class="card-title text-center" id="card-title-A-5">寒性體質</h4>
-                            <p class="card-text" id="ui_A_5_1">失調衰退程度(0-10)： </p>
-                            <p class="card-text" id="ui_A_5_2"></p>
+                    <div class="mr-0 mr-lg-1">
+                        <div class="card" id="card-A-5">
+                            <div class="card-body card-grid-middle-small pl-2">
+                                <h4 class="card-title text-center" id="card-title-A-5">寒性體質</h4>
+                                <p class="card-text" id="ui_A_5_1">失調衰退程度(0-10)： </p>
+                                <p class="card-text" id="ui_A_5_2"></p>
+                            </div>
                         </div>
                     </div>
-                    <div class="card" id="card-B-3">
-                        <div class="card-body card-grid-middle-small">
-                            <h4 class="card-title text-center" id="card-title-B-3">免疫代謝治療</h4>
-                            <p class="card-text" id="card-B-3-default">您的代謝情形良好，無活躍的損傷發炎反應。</p>
-                            <ol class="pl-2">
-                                <li class="card-text ui_B_3"></li>
-                                <li class="card-text ui_B_3"></li>
-                                <li class="card-text ui_B_3"></li>
-                            </ol>
+                    <!-- <div id="card-vertical-line" style="min-height: 712px;max-height: 712px;min-width: 20px;max-width: 20px;">
+                        
+                    </div> -->
+                    <div class="ml-0 ml-lg-1">
+                        <div class="card" id="card-B-3">
+                            <div class="card-body card-grid-middle-small">
+                                <h4 class="card-title text-center" id="card-title-B-3">免疫代謝治療</h4>
+                                <p class="card-text" id="card-B-3-default">您的代謝情形良好，無活躍的損傷發炎反應。</p>
+                                <ol class="pl-2">
+                                    <li class="card-text ui_B_3"></li>
+                                    <li class="card-text ui_B_3"></li>
+                                    <li class="card-text ui_B_3"></li>
+                                </ol>
+                            </div>
                         </div>
                     </div>
-                    <div class="card" id="card-B-4">
-                        <div class="card-body card-grid-middle-small">
-                            <h4 class="card-title text-center" id="card-title-B-4">微循環治療</h4>
-                            <p class="card-text" id="card-B-4-default">您的循環狀況良好，無明顯瘀滯現象。</p>
-                            <ol class="pl-2">
-                                <li class="card-text ui_B_4"></li>
-                                <li class="card-text ui_B_4"></li>
-                                <li class="card-text ui_B_4"></li>
-                            </ol>
+                    <div class="ml-0 ml-lg-1">
+                        <div class="card" id="card-B-4">
+                            <div class="card-body card-grid-middle-small">
+                                <h4 class="card-title text-center" id="card-title-B-4">微循環治療</h4>
+                                <p class="card-text" id="card-B-4-default">您的循環狀況良好，無明顯瘀滯現象。</p>
+                                <ol class="pl-2">
+                                    <li class="card-text ui_B_4"></li>
+                                    <li class="card-text ui_B_4"></li>
+                                    <li class="card-text ui_B_4"></li>
+                                </ol>
+                            </div>
                         </div>
                     </div>
-                    <div class="card" id="card-B-5">
-                        <div class="card-body card-grid-middle-small">
-                            <h4 class="card-title text-center" id="card-title-B-5">機能復甦治療</h4>
-                            <p class="card-text" id="card-B-5-default">您的身體機能運作正常，無顯著失調現象。</p>
-                            <ol class="pl-2">
-                                <li class="card-text ui_B_5"></li>
-                                <li class="card-text ui_B_5"></li>
-                                <li class="card-text ui_B_5"></li>
-                            </ol>
+                    <div class="ml-0 ml-lg-1">
+                        <div class="card" id="card-B-5">
+                            <div class="card-body card-grid-middle-small">
+                                <h4 class="card-title text-center" id="card-title-B-5">機能復甦治療</h4>
+                                <p class="card-text" id="card-B-5-default">您的身體機能運作正常，無顯著失調現象。</p>
+                                <ol class="pl-2">
+                                    <li class="card-text ui_B_5"></li>
+                                    <li class="card-text ui_B_5"></li>
+                                    <li class="card-text ui_B_5"></li>
+                                </ol>
+                            </div>
                         </div>
                     </div>
-                    <div class="card card-grid-middle-large" id="card-B-1">
-                        <div class="card-body">
-                            <h4 class="card-title text-center" id="card-title-B-1">供氧治療</h4>
-                            <p class="card-text" id="card-B-1-default">您的供氧能力尚佳，請繼續保持。</p>
-                            <ol class="pl-2">
-                                <li class="card-text ui_B_1"></li>
-                                <li class="card-text ui_B_1"></li>
-                                <li class="card-text ui_B_1"></li>
-                            </ol>
+                    <div class="">
+                        <div class="card card-grid-middle-large" id="card-B-1">
+                            <div class="card-body">
+                                <h4 class="card-title text-center" id="card-title-B-1">供氧治療</h4>
+                                <p class="card-text" id="card-B-1-default">您的供氧能力尚佳，請繼續保持。</p>
+                                <ol class="pl-2">
+                                    <li class="card-text ui_B_1"></li>
+                                    <li class="card-text ui_B_1"></li>
+                                    <li class="card-text ui_B_1"></li>
+                                </ol>
+                            </div>
                         </div>
                     </div>
-                    <div class="card card-grid-middle-large" id="card-B-2">
-                        <div class="card-body">
-                            <h4 class="card-title text-center" id="card-title-B-2">耗氧治療</h4>
-                            <p class="card-text" id="card-B-2-default">您沒有嚴重的能量透支情形，請持續留意。</p>
-                            <ol class="pl-2">
-                                <li class="card-text ui_B_2"></li>
-                                <li class="card-text ui_B_2"></li>
-                                <li class="card-text ui_B_2"></li>
-                            </ol>
+                    <div class="">
+                        <div class="card card-grid-middle-large" id="card-B-2">
+                            <div class="card-body">
+                                <h4 class="card-title text-center" id="card-title-B-2">耗氧治療</h4>
+                                <p class="card-text" id="card-B-2-default">您沒有嚴重的能量透支情形，請持續留意。</p>
+                                <ol class="pl-2">
+                                    <li class="card-text ui_B_2"></li>
+                                    <li class="card-text ui_B_2"></li>
+                                    <li class="card-text ui_B_2"></li>
+                                </ol>
+                            </div>
                         </div>
                     </div>
                 </div>
