modify: 調整報告頁格式(1. 截圖上下縮 2.D區文字 3. 截圖左右空白)

--- a/report.html
+++ b/report.html
@@ -37,26 +37,36 @@
     <div id="report">
 
         <!-- 12宮格 -->
-        <div id="capture">
-            <div>
-                <table class="container-fluid mt-3 mb-3 mt-lg-5 mb-lg-5">
-                    <tr>
-                        <td style="width: 25%; text-align: center;">
-                            <img class="img-fluid pl-2" alt="Responsive image" src="image/report/logo.jpg">
-                        </td>
-                        <td style="width: 50%;text-align: center;">
-                            <div>
-                                <img class="img-fluid pl-2" alt="Responsive image" src="image/report/title.jpg">
-                        </td>
-                        <td style="width: 25%;text-align: center;"></td>
-                    </tr>
-                </table>
+        <div id="capture" class="container py-3">
+
+
+            <div class="container my-3 my-lg-5">
+              <div class="row text-center">
+                <div class="col-3">
+                  <img class="img-fluid pl-2" alt="Responsive image" src="image/report/logo.jpg">
+                </div>
+                <div class="col-6">
+                  <img class="img-fluid pl-2" alt="Responsive image" src="image/report/title.jpg">
+                </div>
+                <div class="col-3">
+                </div>
+              </div>
             </div>
-            <div style="text-align: center;">
-                <p class="font-blod mt-4 h4" id="ui_D_1"></p>
-                <p class="font-blod mb-4 h4" id="ui_D_2"></p>
+
+            <div class="text-center">
+                <div class="mb-4 h4">
+                    <div class="d-inline">依據您的問卷填答資料，您的</div>
+                    <div class="d-inline font-blod">總缺氧指數</div>
+                    <div class="d-inline">為</div>
+                    <div class="d-inline font-blod text-danger" id="ui_D_1_4"></div>
+                    <div class="d-inline" id="ui_D_1_5"></div>
+                </div>
+                
+                <p class="mb-4 h4" id="ui_D_2"></p>
+
             </div>
-            <div class="container mb-0 pt-3 mb-lg-2 pt-lg-5">
+
+            <div class="container mb-0 pt-3 mb-lg-2 pt-lg-5" >
                 <div class="card-columns card-columns-header">
                     <div class="">
                         <div class="card card-grid-top" id="card-C-2">
@@ -133,9 +143,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div id="card-vertical-line" style="min-height: 712px;max-height: 712px;min-width: 20px;max-width: 20px;">
-                        
-                    </div> -->
                     <div class="ml-0 ml-lg-1">
                         <div class="card" id="card-B-3">
                             <div class="card-body card-grid-middle-small">
@@ -204,7 +211,7 @@
                 </div>
             </div>
             <div class="text-center mt-5 mb-5">
-                <p class="font-blod h4">建議您可定期進行專家系統自我檢測！檢驗改善成效，掌握自身狀態</p>
+                <p class="h4">建議您可定期進行專家系統自我檢測！檢驗改善成效，掌握自身狀態</p>
             </div>
         </div>
         <!-- 12宮格 -->
