fix: 修正無法顯示總分

--- a/report.html
+++ b/report.html
@@ -59,7 +59,7 @@
                     <div class="d-inline">您好，依據您的問卷填答資料，您的</div>
                     <div class="d-inline font-blod">總缺氧指數</div>
                     <div class="d-inline">為</div>
-                    <div class="d-inline font-blod text-danger" id="ui_D_1_2"></div>
+                    <div class="d-inline font-blod text-danger" id="ui_D_1_2_total_value"></div>
                     <div class="d-inline" id="ui_D_1_3_total_wording"></div>
                 </div>
                 
