--- a/report.html
+++ b/report.html
@@ -72,8 +72,8 @@
                     <div class="">
                         <div class="card card-grid-top" id="card-C-2">
                             <div class="card-body">
-                                <h4 class="card-title text-center" id="card-title-C-2">創造有利條件</h4>
-                                <p class="card-text" id="card-C-2-default">顯然您已成功克服那些在生活中經常阻礙我們達成目標的誘惑！</p>
+                                <h4 class="card-title text-center" id="card-title-C-2">聚焦内在目標</h4>
+                                <p class="card-text" id="card-C-2-default">「目標」是行為的趨力，顯然您已確實掌握目標，毋忘初衷。</p>
                                 <ol class="pl-2 pl-lg-4">
                                     <li class="card-text ui_C_2"></li>
                                     <li class="card-text ui_C_2"></li>
@@ -85,8 +85,8 @@
                     <div class="">
                         <div class="card card-grid-top" id="card-C-1">
                             <div class="card-body">
-                                <h4 class="card-title text-center" id="card-title-C-1">聚焦内在目標</h4>
-                                <p class="card-text" id="card-C-1-default">「目標」是行為的趨力，顯然您已確實掌握目標，毋忘初衷。</p>
+                                <h4 class="card-title text-center" id="card-title-C-1">創造有利條件</h4>
+                                <p class="card-text" id="card-C-1-default">顯然您已成功克服那些在生活中經常阻礙我們達成目標的誘惑。</p>
                                 <ol class="pl-2 pl-lg-4">
                                     <li class="card-text ui_C_1"></li>
                                     <li class="card-text ui_C_1"></li>
