--- a/report.html
+++ b/report.html
@@ -227,7 +227,7 @@
             </div>
 
             <div class="text-center mt-5">
-                <img class="img-fluid" alt="Responsive image" src="image/report/content_top.jpg">
+                <a href="https://lihi1.com/Zl3lI" target="_blank"><img class="img-fluid" alt="Responsive image" src="image/report/content_top.jpg">
             </div>
 
             <div class="text-center mt-5">
