--- a/index.html
+++ b/index.html
@@ -80,21 +80,21 @@
 <body>
     <!-- page1 header-->
     <div class="page container-fluid text-center">
-        <img class="img-fluid" alt="Responsive image" src="image/index/p1banner.png">
+        <img class="img-fluid" alt="Responsive image" src="image/index/p1/p1_banner.png">
         <div class="pt-5 pb-5">
-            <a id="downloadReport" href="#btn_next"><img src="image/index/p1_start.png" class="img-fluid p-2" alt="Responsive image"></a>
-            <a id="btn_lastRecordUrl" href="index.html"><img src="image/index/p1_report.png" class="img-fluid p-2" alt="Responsive image">
+            <a id="downloadReport" href="#btn_next"><img src="image/index/p1/p1_start.png" class="img-fluid p-2" alt="Responsive image"></a>
+            <a id="btn_lastRecordUrl" href="index.html"><img src="image/index/p1/p1_report.png" class="img-fluid p-2" alt="Responsive image">
             </a>
         </div>
         <div class="pb-5">
-            <a href="https://youtu.be/Pa8yMexQqtU" target="_blank"><img src="image/index/p1_video.png" class="img-fluid p-2" alt="Responsive image"></a>
+            <a href="https://youtu.be/Pa8yMexQqtU" target="_blank"><img src="image/index/p1/p1_video.png" class="img-fluid p-2" alt="Responsive image"></a>
         </div>
 
         <!-- page1 body-->
         <div class="container text-center">
             <img class="img-fluid" alt="Responsive image" src="image/index/flow.jpg">    
             
-            <img class="img-fluid" alt="Responsive image" src="image/index/p1_progress.png">
+            <img class="img-fluid" alt="Responsive image" src="image/index/p1/p1_progress.png">
             <!-- 聯絡我 -->
             <!-- <div class="container-fluid contact-form"> -->
             <div class="container contact-form">
@@ -125,7 +125,7 @@
         <!-- flow image -->
         <img class="img-fluid mt-5" alt="Responsive image" src="image/index/flow.jpg">
         <!-- progress image -->
-        <img class="img-fluid mt-3" alt="Responsive image" src="image/index/p2_progress.png">
+        <img class="img-fluid mt-3" alt="Responsive image" src="image/index/p2/p2_progress.png">
         <div id="page2-question">
             <div class="radio-header-box mt-3 mt-lg-5 pt-4 pb-3" >
                 <!-- title -->
@@ -140,7 +140,7 @@
         <!-- flow image -->
         <img class="img-fluid mt-5" alt="Responsive image" src="image/index/flow.jpg">
         <!-- progress image -->
-        <img class="img-fluid mt-3" alt="Responsive image" src="image/index/p3_progress.png">
+        <img class="img-fluid mt-3" alt="Responsive image" src="image/index/p3/p3_progress.png">
         <div id="page3-question">
             <div class="radio-header-box mt-3 mt-lg-5 pt-4 pb-3">
                 <!-- title -->
@@ -155,7 +155,7 @@
         <!-- flow image -->
         <img class="img-fluid mt-5" alt="Responsive image" src="image/index/flow.jpg">
         <!-- progress image -->
-        <img class="img-fluid mt-3" alt="Responsive image" src="image/index/p4_progress.png">
+        <img class="img-fluid mt-3" alt="Responsive image" src="image/index/p4/p4_progress.png">
         <div id="page4-question">
             <div class="radio-header-box mt-3 mt-lg-5 pt-4 pb-3">
                 <!-- title -->
@@ -170,7 +170,7 @@
         <!-- flow image -->
         <img class="img-fluid mt-5" alt="Responsive image" src="image/index/flow.jpg">
         <!-- progress image -->
-        <img class="img-fluid mt-3" alt="Responsive image" src="image/index/p5_progress.png">
+        <img class="img-fluid mt-3" alt="Responsive image" src="image/index/p4/p5_progress.png">
         <!-- Bootstrap Contact Form -->
         <div class="container contact-form">
             <form method="post">
@@ -211,7 +211,7 @@
     <button id="btn_pre">上一頁</button> -->
     <!-- 按鈕：下一頁 -->
     <div class="text-center pt-5">
-        <img id="btn_next" class="img-fluid p-2" alt="Responsive image" src="image/index/p1_next.jpg" >
+        <img id="btn_next" src="image/index/p1/p1_next.jpg" class="img-fluid p-2" alt="Responsive image">
     </div>
 </body>
 
