--- a/report.html
+++ b/report.html
@@ -36,6 +36,7 @@
     </div>
     
     <div id="report">
+        <div id="capture">
         <div class="titleImgDiv">
             <img class="titleImg" src="image/report/titleNew.png">
         </div>
@@ -122,6 +123,7 @@
                 </div>
             </div>
         </div>
+    </div>
 
 
             <!-- 固定內容 -->
