--- a/report.html
+++ b/report.html
@@ -55,7 +55,7 @@
                 <div class="formTitle">您的缺氧原因</div>
                 <div class="userName">
                 <div id="ui_D_1_1_username" style="font-weight: 900;"> </div>
-                <div style="font-weight: 900;"> 您好，</div>
+                <div style="font-weight: 900;"> 您好</div>
                 </div>
                 <div class="formContent3" id="ui_D_2"></div>
             </div>
@@ -65,7 +65,10 @@
             <div class="description">
                 <div class="decTitle">供給性缺氧</div>
                 <div class="decTitle2" id="ui_A_1_1">供氧障礙程度(0-10)：</div>
-                <ul class="decContent pl-2">
+                <div class="card card-grid-middle-large" id="card-B-1">
+                    <p class="card-text" id="card-B-1-default">您的供氧能力尚佳，請繼續保持。</p>
+                </div>
+                <ul class="decContent pl-2">      
                     <li class="card-text ui_B_1"></li>
                     <li class="card-text ui_B_1"></li>
                     <li class="card-text ui_B_1"></li>
@@ -78,6 +81,7 @@
                 <div class="decTitle">耗損性缺氧</div>
                 <div class="decTitle2" id="ui_A_2_1">能量透支程度(0-10)：</div>
                 <ul class="decContent pl-2">
+                    <p class="card-text" id="card-B-2-default">您沒有嚴重的能量透支情形，請持續留意。</p>
                     <li class="card-text ui_B_2"></li>
                     <li class="card-text ui_B_2"></li>
                     <li class="card-text ui_B_2"></li>
@@ -90,6 +94,7 @@
                 <div class="decTitle">熱性體質</div>
                 <div class="decTitle2" id="ui_A_3_1">損傷發炎程度(0-10)：</div>
                 <ul class="decContent pl-2">
+                    <p class="card-text" id="card-B-3-default">您的代謝情形良好，無活躍的損傷發炎反應。</p>
                     <li class="card-text ui_B_3"></li>
                     <li class="card-text ui_B_3"></li>
                     <li class="card-text ui_B_3"></li>
@@ -102,6 +107,7 @@
                 <div class="decTitle">濕性體質</div>
                 <div class="decTitle2" id="ui_A_4_1">循環瘀滯程度(0-10)：</div>
                 <ul class="decContent pl-2">
+                    <p class="card-text" id="card-B-4-default">您的循環狀況良好，無明顯瘀滯現象。</p>
                     <li class="card-text ui_B_4"></li>
                     <li class="card-text ui_B_4"></li>
                     <li class="card-text ui_B_4"></li>
@@ -114,6 +120,7 @@
                 <div class="decTitle">寒性體質</div>
                 <div class="decTitle2" id="ui_A_5_1">失調衰退程度(0-10)：</div>
                 <ul class="decContent pl-2">
+                    <p class="card-text" id="card-B-5-default">您的身體機能運作正常，無顯著失調現象。</p>
                     <li class="card-text ui_B_5"></li>
                     <li class="card-text ui_B_5"></li>
                     <li class="card-text ui_B_5"></li>
